# pdf-rag-chatbot

./: .gitignore  README.md  app.py  geminitest.py  main.py  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
src/: chat_engine.py  embeddings.py  export_utils.py  llm.py  pdf_loader.py  text_splitter.py  vector_store.py
